updated the frontend ui changes

--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,3 @@
-MONGO_URL='mongodb+srv://charan:<1234>@cluster0.dpzvbfo.mongodb.net/'
+MONGO_URL='mongodb+srv://charan1:<1234>@cluster0.dpzvbfo.mongodb.net/?retryWrites=true&w=majority'
+
 PORT=3001
