--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,4 +1,12 @@
 {
+  "name": "rayam",
+  "version": "1.0.0",
+  "type": "module",
+  "main": "index.mjs",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
@@ -13,13 +21,7 @@
     "multer": "^1.4.4",
     "multer-gridfs-storage": "^5.0.2"
   },
-  "name": "rayam",
-  "version": "1.0.0",
-  "main": "index.js",
   "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
   "keywords": [],
   "author": "",
   "license": "ISC",
